@@ -3074,6 +3074,19 @@ $templates
 			$vars['wgUserEditCount'] = $user->getEditCount();
 			$userReg = wfTimestampOrNull( TS_UNIX, $user->getRegistration() );
 			$vars['wgUserRegistration'] = $userReg !== null ? ( $userReg * 1000 ) : null;
+			// Get the revision ID of the oldest new message on the user's talk
+			// page. This can be used for constructing new message alerts on
+			// the client side.
+			$newMessageRevisionId = null;
+			$newMessageLinks = $user->getNewMessageLinks();
+			// Note: getNewMessageLinks() always returns a single link and it is
+			// always for the same wiki, but we double-check here in case that
+			// changes some time in the future.
+			if ( count( $newMessageLinks ) === 1 && $newMessageLinks[0]['wiki'] === wfWikiID() ) {
+				$newMessageRevision = $newMessageLinks[0]['rev'];
+				$newMessageRevisionId = $newMessageRevision->getId();
+			}
+			$vars['wgUserNewMsgRevisionId'] = $newMessageRevisionId;
 		}
 		if ( $wgContLang->hasVariants() ) {
 			$vars['wgUserVariant'] = $wgContLang->getPreferredVariant();
